fixed load time

--- a/index.html
+++ b/index.html
@@ -35,67 +35,14 @@
 				<section id="text">
   					<h1>About Me</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p>I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I am looking for full time developer positions.</p>
+  					<p style="text-align:center;">I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I am looking for full time developer positions.</p>
 				</section>
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-				<section id="projects">
-  					<h1>Projects</h1>
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p>I like to work on personal programming projects in my free time. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
-  					<details>
-  						<summary>Recycle Bot</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
-		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/re.gif" alt="demo" />
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the neural network as well as a heatmap of the pixels that activated the final convolutional layer can be viewed below:</p>
-		  					<img src="images/44.gif" alt="Forward Propagation" />
-		  					<img src="images/HeatMap44.png" alt="HeatMap" />
-		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
-		  					<img src="images/SVM.jpg" alt="Support Vector Machine" />
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Generative Adversarial Networks</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<img src="images/result1.gif" alt="Cat" />
-		  					<img src="images/result2.gif" alt="Cat" />
-		  					<img src="images/result3.gif" alt="Cat" />
-		  					<img src="images/perfectloop1.gif" alt="Faces" />
-		  					<img src="images/perfectloop2.gif" alt="Faces" />
-		  					<img src="images/perfectloop3.gif" alt="Faces" />
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Machine Learning Generated Music</summary>
-	  						<div style="height:15px;font-size:15px;">&nbsp;</div>
-			  				<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Music-Composition-GAN">GitHub Page</a></p>
-			  				<audio controls>
-	  						<source src="images/3.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/1.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/2.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
+				<section id="link">
+  					<h1><a href="projects.html">Projects</a></h1>
+  				</section>
 
 			</div>
 
