fixed projects page

--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,11 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper2">
 				<section id="projects">
   					<h1>Projects</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style=text-align:center;">I like to work on personal programming projects in my free time. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
+  					<p style="text-align:center;">I like to work on personal programming projects in my free time. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
   					<details>
   						<summary>Recycle Bot</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
