fixed projects page

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper2">
 				<section id="projects">
   					<h1>Projects</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
