--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/re.gif" alt="demo" />
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the neural network as well as a heatmap of the pixels that activated the final convolutional layer can be viewed below:</p>
+		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
 		  					<img src="images/44.gif" alt="Forward Propagation" />
 		  					<img src="images/HeatMap44.png" alt="HeatMap" />
 		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
