--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Pokemon-VQVAE">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up the 37.5% the space of the original image:</p>
-		  					<img src="images/vqvae.jpg" alt="Kernel Ridge Regression" />
+		  					<img src="images/vqvae.JPG" alt="Kernel Ridge Regression" />
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
