--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,15 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
-  						<summary>Deep Learned Super Sampling</summary>
+  						<summary>Generative Adversarial Networks</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
-		  					<img src="images/zoe.gif" alt="League" />
+		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
+		  					<video width="720" height="480" controls autoplay loop>
+							  <source src="images/gifcropped.mp4" type="video/mp4">
+							  <source src="movie.ogg" type="video/ogg">
+							</video>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -62,6 +65,18 @@
 		  						<source src="images/2.mp3" type="audio/mpeg">
 							</audio>
 							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Deep Learned Super Sampling</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
+		  					<img src="images/zoe.gif" alt="League" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -124,26 +139,6 @@
 		  					<img src="images/vqvae.JPG" alt="Kernel Ridge Regression" />
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Generative Adversarial Networks</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<img src="images/result1.gif" alt="Cat" />
-		  					<img src="images/result2.gif" alt="Cat" />
-		  					<img src="images/result3.gif" alt="Cat" />
-		  					<img src="images/perfectloop1.gif" alt="Faces" />
-		  					<img src="images/perfectloop2.gif" alt="Faces" />
-		  					<img src="images/perfectloop3.gif" alt="Faces" />
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-
-  					
 
 						<!-- Footer -->
 					<footer id="footer">
