--- a/index.html
+++ b/index.html
@@ -40,8 +40,133 @@
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-				<section id="link">
-  					<h1><a href="projects.html">Projects</a></h1>
+				<section id="projects">
+  					<h1>Projects</h1>
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					<p style="text-align:center;">I like to work on personal programming projects in my free time. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
+  					<details>
+  						<summary>Recycle Bot</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
+		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<img src="images/re.gif" alt="demo" />
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
+		  					<img src="images/44.gif" alt="Forward Propagation" />
+		  					<img src="images/HeatMap44.png" alt="HeatMap" />
+		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
+		  					<img src="images/SVM.jpg" alt="Support Vector Machine" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Generative Adversarial Networks</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
+		  					<video width="720" height="480" controls autoplay loop>
+							  <source src="images/gifcropped.mp4" type="video/mp4">
+							  <source src="movie.ogg" type="video/ogg">
+							</video>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Machine Learning Generated Music</summary>
+	  						<div style="height:15px;font-size:15px;">&nbsp;</div>
+			  				<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Music-Composition-GAN">GitHub Page</a></p>
+			  				<audio controls>
+	  						<source src="images/3.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:5px;font-size:15px;">&nbsp;</div>
+							<audio controls>
+		  						<source src="images/1.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:5px;font-size:15px;">&nbsp;</div>
+							<audio controls>
+		  						<source src="images/2.mp3" type="audio/mpeg">
+							</audio>
+							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Deep Learned Super Sampling</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
+		  					<img src="images/zoe.gif" alt="League" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Unsupervised Learning Image Segmentation</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/K-Means-Image-Segmentation">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<img src="images/kmeans.JPG" alt="K-Means" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Forecasting My Instagram Usage</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Instagram-Forecasting">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<img src="images/insta1.png" alt="Likes Given Per Account" />
+		  					<img src="images/insta2.png" alt="Forecasting" />
+		  					<img src="images/insta3.png" alt="Forecasting" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Unsupervised Learning Image Compression</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/PCA">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Using Principal Component Analysis and K-Means to compress images:</p>
+		  					<img src="images/PCA.png" alt="PCA" />
+		  					<img src="images/KMEANS.png" alt="KMEANS" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Kernel Ridge Regression</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Kernel-Ridge-Regression">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
+		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Vector Quantized Variational AutoEncoder</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Pokemon-VQVAE">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up the 37.5% the space of the original image:</p>
+		  					<img src="images/vqvae.JPG" alt="Kernel Ridge Regression" />
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
   				</section>
 
 			</div>
