--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 				<section id="projects">
   					<h1>Projects</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">I like to work on personal programming projects in my free time. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
+  					<p style="text-align:center;">I like to work on personal programming projects in my free time. I am specifically interested in Data Science and I do most of my work in Python. I have compiled a list of projects that I am proud of. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
   					<details>
   						<summary>Recycle Bot</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -139,6 +139,8 @@
 		  					<img src="images/vqvae.JPG" alt="Kernel Ridge Regression" />
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
 						<!-- Footer -->
 					<footer id="footer">
