--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,13 @@
 		  					<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Recycle-Bot">GitHub Page</a></p>
 		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/re.gif" alt="demo" />
+		  					<img src="images/re.gif" alt="demo" class="responsive">
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
-		  					<img src="images/44.gif" alt="Forward Propagation" />
-		  					<img src="images/HeatMap44.png" alt="HeatMap" />
+		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
+		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
 		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
-		  					<img src="images/SVM.jpg" alt="Support Vector Machine" />
+		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -40,7 +40,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<video width="720" height="480" controls autoplay loop>
+		  					<video controls autoplay loop>
 							  <source src="images/gifcropped.mp4" type="video/mp4">
 							  <source src="movie.ogg" type="video/ogg">
 							</video>
@@ -75,7 +75,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
-		  					<img src="images/zoe.gif" alt="League" />
+		  					<img src="images/zoe.gif" alt="League" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -86,7 +86,7 @@
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/K-Means-Image-Segmentation">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/kmeans.JPG" alt="K-Means" />
+		  					<img src="images/kmeans.JPG" alt="K-Means" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -97,9 +97,9 @@
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Instagram-Forecasting">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/insta1.png" alt="Likes Given Per Account" />
-		  					<img src="images/insta2.png" alt="Forecasting" />
-		  					<img src="images/insta3.png" alt="Forecasting" />
+		  					<img src="images/insta1.png" alt="Likes Given Per Account" class="responsive">
+		  					<img src="images/insta2.png" alt="Forecasting" class="responsive">
+		  					<img src="images/insta3.png" alt="Forecasting" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -111,8 +111,8 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/PCA">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Using Principal Component Analysis and K-Means to compress images:</p>
-		  					<img src="images/PCA.png" alt="PCA" />
-		  					<img src="images/KMEANS.png" alt="KMEANS" />
+		  					<img src="images/PCA.png" alt="PCA" class="responsive">
+		  					<img src="images/KMEANS.png" alt="KMEANS" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -124,7 +124,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Kernel-Ridge-Regression">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
-		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" />
+		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -136,7 +136,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Pokemon-VQVAE">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up the 37.5% the space of the original image:</p>
-		  					<img src="images/vqvae.JPG" alt="Kernel Ridge Regression" />
+		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
