mute video by default

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<video controls autoplay loop>
+		  					<video controls autoplay loop muted>
 							  <source src="images/gifcropped.mp4" type="video/mp4">
 							  <source src="movie.ogg" type="video/ogg">
 							</video>
