--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,7 @@
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
 		  					<img src="images/zoe.gif" alt="League" class="responsive">
+		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
