added Ms. Pac-Man RL

--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,36 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<video controls autoplay loop muted>
-							  <source src="images/gifcropped.mp4" type="video/mp4">
-							  <source src="movie.ogg" type="video/ogg">
+		  					<video controls autoplay loop>
+							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Ms. Pac-Man Reinforcement Learning</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Q-Network">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
+		  					<video controls autoplay loop>
+							  <source src="images/mspacman.mp4" type="video/mp4">
+							</video>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Deep Learned Super Sampling</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
+		  					<img src="images/zoe.gif" alt="League" class="responsive">
+		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -65,19 +91,6 @@
 		  						<source src="images/2.mp3" type="audio/mpeg">
 							</audio>
 							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Deep Learned Super Sampling</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
-		  					<img src="images/zoe.gif" alt="League" class="responsive">
-		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
