--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
   					<h1><a href="projects.html">Projects</a></h1>
   				</section>
 
+  				<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  				<section id="link">
+  					<h1><a href="skate.html">Skateboarding</a></h1>
+  				</section>
+
 			</div>
 
 		<!-- Scripts -->
