--- a/skate.html
+++ b/skate.html
@@ -17,6 +17,12 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club with my friends during college. These are some photos showcasing the fun I had during that time period.</p>
 
+            <div style="height:20px;font-size:15px;">&nbsp;</div>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <div style="height:20px;font-size:15px;">&nbsp;</div>
+
   					<img src="images/umass.jpg" alt="skateclub" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
@@ -77,7 +83,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate16.JPEG" alt="rock to fakie" class="responsive" loading="lazy">
+  					<img src="images/skate16.jpeg" alt="rock to fakie" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
