optimized loading times

--- a/skate.html
+++ b/skate.html
@@ -19,7 +19,7 @@
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe>
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -27,11 +27,11 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate3.jpg" alt="feeble" class="responsive" loading="lazy">
+  					<img src="images/skate3.webp" alt="feeble" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
   					
-  					<img src="images/skate1.jpg" alt="back180" class="responsive" loading="lazy">
+  					<img src="images/skate1.webp" alt="back180" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
   					
