--- a/skate.html
+++ b/skate.html
@@ -19,7 +19,7 @@
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1&rel=0" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe>
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -51,7 +51,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate4.jpg" alt="back tail" class="responsive" loading="lazy">
+  					<img src="images/skate4.webp" alt="back tail" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
