youtube link mobile responsive

--- a/skate.html
+++ b/skate.html
@@ -19,7 +19,7 @@
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1&rel=0" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe>
+            <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe></div>
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
