--- a/skate.html
+++ b/skate.html
@@ -15,11 +15,12 @@
 				<section id="projects">
   					<h1>Skateboarding</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club with my friends during college. These are some photos showcasing the fun I had during that time period.</p>
-
+  					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club with my friends during college. This was a video I filmed during my senior year showcasing the skate community.</p>
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
             <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe></div>
+
+            <p>These are some photos showcasing the fun I had during that time period.</p>
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -39,7 +40,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
   					
-  					<img src="images/skate7.jpg" alt="wallie" class="responsive" loading="lazy">
+  					<img src="images/skate7.webp" alt="wallie" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
   					
@@ -47,7 +48,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate6.jpg" alt="tre flip" class="responsive" loading="lazy">
+  					<img src="images/skate6.webp" alt="tre flip" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -55,7 +56,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate8.jpg" alt="tre flip fifty" class="responsive" loading="lazy">
+  					<img src="images/skate8.webp" alt="tre flip fifty" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -63,7 +64,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate5.jpg" alt="front nose" class="responsive" loading="lazy">
+  					<img src="images/skate5.webp" alt="front nose" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
