--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@
 		  					<img src="images/re.gif" alt="demo" class="responsive" loading="lazy">
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
-		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive" loading="lazy">
-		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive" loading="lazy">
+		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
+		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
 		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
-		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive" loading="lazy">
+		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -68,8 +68,8 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
-		  					<img src="images/zoe.gif" alt="League" class="responsive" loading="lazy">
-		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive" loading="lazy">
+		  					<img src="images/zoe.gif" alt="League" class="responsive">
+		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
