load time optimization

--- a/skate.html
+++ b/skate.html
@@ -44,7 +44,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
   					
-  					<img src="images/skate10.jpg" alt="switch front shove" class="responsive" loading="lazy">
+  					<img src="images/skate10.webp" alt="switch front shove" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -60,7 +60,7 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate9.jpg" alt="laser" class="responsive" loading="lazy">
+  					<img src="images/skate9.webp" alt="laser" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -68,23 +68,23 @@
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate11.jpg" alt="hardflip" class="responsive" loading="lazy">
+  					<img src="images/skate11.webp" alt="hardflip" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate12.jpg" alt="varial heel" class="responsive" loading="lazy">
+  					<img src="images/skate12.webp" alt="varial heel" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate14.jpg" alt="front smith" class="responsive" loading="lazy">
+  					<img src="images/skate13.webp" alt="front smith" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate15.jpg" alt="ollie" class="responsive" loading="lazy">
+  					<img src="images/skate14.webp" alt="ollie" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
-  					<img src="images/skate16.jpeg" alt="rock to fakie" class="responsive" loading="lazy">
+  					<img src="images/skate15.jpeg" alt="rock to fakie" class="responsive" loading="lazy">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
 
