mobile alignment fix

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-				<section id="link">
+				<section id="text">
   					<h1><a href="projects.html">Projects</a></h1>
   				</section>
 
   				<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-  				<section id="link">
+  				<section id="text">
   					<h1><a href="skate.html">Skateboarding</a></h1>
   				</section>
 
